movies-books-games/mbg2017.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans');

html { font-size: 16px; }

body {
  background-color: #efefea;
  color: #222;
  font-family: 'Open Sans', sans-serif;
  line-height: 1.5em;
  margin: 0;
  padding: 0;
  text-rendering: optimizeLegibility;
  width: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

main {
  margin: 0 auto;
  max-width: 800px;
  padding: 3rem;
}

h1, h2, h3 {
  margin: 0;
  padding: 0;
}

h1 {
  font-size: 2rem;
  line-height: 1em;
}

h2 {
  font-size: 1.2rem;
  color: #ff9100;
  margin-top: 2rem;
  margin-bottom: 2rem;
}

h3 { font-size: 1.5rem; }

.entry { margin-bottom: 1.7rem; }

.cover-and-title {
  display: flex;
  align-items: center;
  margin-bottom: 1rem;
}

.cover-and-title * { box-sizing: border-box; }
.cover-and-title div { padding-right: 1.3rem; }
.cover-and-title .cover { width: 8rem; }
.cover-and-title .cover img { width: 100%; }

.author {
  font-style: italic;
  font-size: 1rem;
}

